# gocpp

./: CMakeLists.txt  README.md  app.cpp
add/: CMakeLists.txt  add.go
